--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "Rich Trott",
   "license": "MIT",
   "dependencies": {
-    "compute-stdev": "^1.0.0",
-    "request": "^2.88.0"
+    "compute-stdev": "^1.0.0"
   },
   "repository": {
     "type": "git",
