--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/nodejs/meeting-picker#readme",
   "devDependencies": {
     "standard": "^16.0.4"
+  },
+  "engines": {
+    "node": "12.x || 14.x || 16.x"
   }
 }
