--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
-    "c8": "^7.11.0",
+    "@types/node": "18.7",
+    "c8": "7.12",
     "ts-standard": "^11.0.0",
     "typescript": "^4.7.0-beta"
   },
